# termgin

./: Cargo.toml  README.md  cspell.json
graphics/: Cargo.toml
graphics/examples/: mesh.rs  rasterizer.rs
graphics/src/: lib.rs  loader.rs  material.rs  raster.rs  render.rs  shader.rs  terminal.rs
graphics/src/material/: tex_mat.rs
graphics/src/raster/: depth.rs  raster.rs  shader.rs  target.rs  vertex.rs
graphics/src/render/: camera.rs  geometry.rs  material.rs  mesh.rs  renderer.rs  texture.rs
graphics/src/shader/: tex_mat.rs
graphics/src/terminal/: color.rs
