[package]
name = "graphics"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.11.8"
glam = "0.30.3"
gltf = "1.3.0"
image = "0.25.6"
libc = "0.2.151"
log = "0.4.20"
obj-rs = "0.7.1"
